# spectrum_service_hardware

./: .gitignore  CMakeLists.txt  README.md  conan_toolchain.cmake  conandeps_legacy.cmake  conanfile.py  fmt-release-x86_64-data.cmake  main.cpp  module-GTest-release-x86_64-data.cmake  spdlog-release-x86_64-data.cmake
.gitlab/merge_request_templates/: Default.md
conan_env/: pyvenv.cfg
libraries/: CMakeLists.txt
libraries/command/: CMakeLists.txt  i_command.h
libraries/command/keyboard/: read_key_pressed_command.cpp  read_key_pressed_command.h  read_key_released_command.cpp  read_key_released_command.h  read_version_command.cpp  read_version_command.h  write_beep_tecla_command.cpp  write_beep_tecla_command.h  write_buzzer_command.cpp  write_buzzer_command.h  write_led_tecla_command.cpp  write_led_tecla_command.h
libraries/command/mcb/: desliga_mcb_command.cpp  desliga_mcb_command.h  read_analog_input_command.cpp  read_analog_input_command.h  read_chave_liga_command.cpp  read_chave_liga_command.h  read_data_hora_command.cpp  read_data_hora_command.h  read_firmware_command.cpp  read_firmware_command.h  read_info1_command.cpp  read_info1_command.h  read_info2_command.cpp  read_info2_command.h  read_info3_command.cpp  read_info3_command.h  read_input_digital_command.cpp  read_input_digital_command.h  read_mac_pc_command.cpp  read_mac_pc_command.h  read_sensor_distance_command.cpp  read_sensor_distance_command.h  read_status_command.cpp  read_status_command.h  read_status_special_command.cpp  read_status_special_command.h  write_analog_out_command.cpp  write_analog_out_command.h  write_baud_uart1_command.cpp  write_baud_uart1_command.h  write_baud_uart2_command.cpp  write_baud_uart2_command.h  write_config_command.cpp  write_config_command.h  write_data_hora_command.cpp  write_data_hora_command.h  write_digital_out_command.cpp  write_digital_out_command.h  write_digital_timer_command.cpp  write_digital_timer_command.h  (+14 more)
libraries/controller/: CMakeLists.txt  controller_factory.cpp  controller_factory.h  device_controller.cpp  device_controller.h  i_controller.h  protocol_controller.cpp  protocol_controller.h
libraries/keyboard/: CMakeLists.txt
libraries/keyboard/config/: keyboard_constants.h
libraries/keyboard/decoder/: keyboard_decoder.cpp  keyboard_decoder.h
libraries/keyboard/protocols/: keyboard_protocol.cpp  keyboard_protocol.h
libraries/keyboard/receiver/: keyboard_receiver.cpp  keyboard_receiver.h
libraries/mcb/: CMakeLists.txt
libraries/mcb/communication/protocols/: mcb_protocol.cpp
libraries/mcb/config/: mcb_constants.h
libraries/mcb/decoder/: mcb_decoder.cpp  mcb_decoder.h
libraries/mcb/protocols/: mcb_protocol.cpp  mcb_protocol.h
libraries/mcb/receiver/: mcb_receiver.cpp  mcb_receiver.h
libraries/protocols/: CMakeLists.txt  i_protocol.h
libraries/protocols/mcb_keyboard/: mcb_keyboard_protocol.cpp  mcb_keyboard_protocol.h
libraries/receiver/: CMakeLists.txt  dummy_mcb_frame_receiver.h  i_receiver.h
libraries/receiver/keyboard/: keyboard_receiver.cpp  keyboard_receiver.h
libraries/receiver/mcb/: mcb_frame_awaiter.cpp  mcb_frame_awaiter.h  mcb_frame_vector_awaiter.h  mcb_receiver.cpp  mcb_receiver.h
libraries/transport/: CMakeLists.txt  i_transport.h  rs232_transport.cpp  rs232_transport.h  rs485_transport.cpp  rs485_transport.h  serial_transport.cpp  serial_transport.h  tcp_transport.cpp  tcp_transport.h
libraries/transport/enum_/: enum_baudrate.h  enum_bauntrate.h  enum_transportstatus.h
libraries/transport/interface/: i_transport.h
libraries/transport/network/: tcp_transport.cpp  tcp_transport.h
libraries/transport/serial/: rs232_transport.cpp  rs232_transport.h  rs485_transport.cpp  rs485_transport.h  serial_transport.cpp  serial_transport.h
scripts/: build.sh  test.sh
service/: CMakeLists.txt
tests/: CMakeLists.txt  mcb_test.cpp  mcb_testArray.cpp  test_all_commands.cpp  test_mcb_status.cpp  teste_esteira.cpp  teste_read_mcb.cpp  teste_tcp_transport.cpp  teste_writedatahora.cpp
utils/: CMakeLists.txt  logger.cpp  logger.h
utils/enum_/: enum_commandcontext.h  enum_errorcode.h  keyboard_keycodes.h  mcb_port_addresses.h
utils/logger/: logger.h
utils/translator/: response_translator.cpp  response_translator.h
